[gd_scene load_steps=2 format=3 uid="uid://bxqt8n5v7qk3m"]

[ext_resource type="Script" path="res://addons/gs_mmo_tools/sprite_editor.gd" id="1_2r5dq"]

[node name="SpriteEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_2r5dq")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Golden Sun MMO - Sprite Animation Editor"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpriteSheet" type="VBoxContainer" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/HBox/SpriteSheet"]
layout_mode = 2
text = "Sprite Sheet"

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/HBox/SpriteSheet"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBox/HBox/SpriteSheet/ScrollContainer"]
layout_mode = 2
columns = 12

[node name="Controls" type="VBoxContainer" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AnimationLabel" type="Label" parent="VBox/HBox/Controls"]
layout_mode = 2
text = "Animations"

[node name="AnimationList" type="ItemList" parent="VBox/HBox/Controls"]
layout_mode = 2
size_flags_vertical = 3

[node name="FrameLabel" type="Label" parent="VBox/HBox/Controls"]
layout_mode = 2
text = "Frames"

[node name="FrameList" type="ItemList" parent="VBox/HBox/Controls"]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveLoad" type="HBoxContainer" parent="VBox/HBox/Controls"]
layout_mode = 2

[node name="SaveBtn" type="Button" parent="VBox/HBox/Controls/SaveLoad"]
layout_mode = 2
text = "Save"

[node name="LoadBtn" type="Button" parent="VBox/HBox/Controls/SaveLoad"]
layout_mode = 2
text = "Load"

[node name="Preview" type="VBoxContainer" parent="VBox/HBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/HBox/Preview"]
layout_mode = 2
text = "Preview"

[node name="SpritePreview" type="TextureRect" parent="VBox/HBox/Preview"]
layout_mode = 2
custom_minimum_size = Vector2(128, 128)

[connection signal="item_selected" from="VBox/HBox/Controls/AnimationList" to="." method="_on_animation_selected"]
[connection signal="item_selected" from="VBox/HBox/Controls/FrameList" to="." method="_on_frame_selected"]